--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="A single-page-app that loads random memes"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/landing-lighter.png">
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/images/landing-lighter.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
