--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,12 @@
       name="description"
       content="A single-page-app that loads random memes"
     />
-    <meta
-    name="og:title"
-    content="Memes Only"
-  />
+    <meta name="og:title" content="Memes Only" />
     <meta
       name="og:description"
       content="A single-page-app that loads random memes"
     />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%/images/background.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/images/background.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/amongus.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -36,17 +30,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>low-effort memes</title>
+    <title>memes only</title>
   </head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N2PRT793LF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-N2PRT793LF"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-N2PRT793LF');
-</script>
+    gtag("config", "G-N2PRT793LF");
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
